--- a/loaproject/loaTier/templates/home.html
+++ b/loaproject/loaTier/templates/home.html
@@ -16,14 +16,14 @@
     </header>
     <div class="manutitle">
       <div><h1> 사이트 이름 </h1></div>
-      <div><h2>사이트 간단한 설명</h2></div>
+      <div><h2>LostArk Fanmade Website</h2></div>
     </div>
     <div class="home" >
       <div class="main_option"><h2>주요 기능</h2></div>
         <div class="menu">
             <a  href="/make/kamen"><div class="maina"><h3>티어 만들기</h3> <p><div class='text'>내가 만드는 티어표</div></div></a>
             <a  href="res/all?raid=kamen"><div class="maina"><h3>티어 통계</h3><p><div class='text'>사람들이 생각하는 티어 통계</div></div></a>
-            <a  href="/input/"><div class="maina"><h3>계승 계산기</h3><p><div class='text'>계승에 필요한 재료 계산</div></div></a>
+            <a  href="/input/"><div class="maina"><h3>초월 & 계승 계산기</h3><p><div class='text'>계승에 필요한 재료 계산</div></div></a>
         </div>
     </div>
     <div>
