--- a/loaproject/loaCalc/templates/input_name.html
+++ b/loaproject/loaCalc/templates/input_name.html
@@ -4,7 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{% static "css/index.css" %}?ver=1" /> <link rel="stylesheet" href="{% static "css/input_name.css" %}?ver=1" /> <link
+    <link rel="stylesheet" href="{% static "css/index.css" %}?ver=1" /> <link
+    rel="stylesheet" href="{% static "css/input_name.css" %}?ver=1" /> <link
     rel="stylesheet" href="{% static "css/Calculator.css" %}?ver=1" />
     <title>LoaTier</title>
   </head>
@@ -12,6 +13,9 @@
     <header>{%include "includes/header.html"%}</header>
 
     <div class="pageName"><h1>초월 & 계승 계산기</h1></div>
+    <div class="direction">
+      <h3>원하는 계산의 이미지를 선택한 후, 캐릭터 명을 입력하세요</h3>
+    </div>
 
     <div class="inputName">
       <form action="/calc/" method="post">
@@ -19,7 +23,11 @@
           <div class="character">
             <input type="radio" id="kamen_info" name="raidName" value="1" />
             <label for="kamen_info" id="kamen_info_label">
-              <img src="https://i.imgur.com/inTtFRH.png" alt="카멘" draggable="false" />
+              <img
+                src="https://i.imgur.com/inTtFRH.png"
+                alt="카멘"
+                draggable="false"
+              />
             </label>
             <span>카멘</span>
           </div>
@@ -27,13 +35,25 @@
           <div class="character">
             <input type="radio" id="illiakan_info" name="raidName" value="0" />
             <label for="illiakan_info" id="illiakan_info_label">
-              <img src="https://i.imgur.com/QXnwSY8.png" alt="일리아칸" draggable="false" />
+              <img
+                src="https://i.imgur.com/QXnwSY8.png"
+                alt="일리아칸"
+                draggable="false"
+              />
             </label>
             <span>일리아칸</span>
           </div>
         </div>
         <div>
-          <input id="charName" name="charName" type="text" placeholder="캐릭터명을 입력하세요" autofocus size="50" maxlength="12" />
+          <input
+            id="charName"
+            name="charName"
+            type="text"
+            placeholder="캐릭터명을 입력하세요"
+            autofocus
+            size="50"
+            maxlength="12"
+          />
           <button class="button">검색</button>
         </div>
       </form>
