--- a/loaproject/loaCalc/templates/input_name.html
+++ b/loaproject/loaCalc/templates/input_name.html
@@ -12,7 +12,10 @@
   <body>
     <header>{%include "includes/header.html"%}</header>
 
-    <div class="pageName"><h1>초월 & 계승 계산기</h1></div>
+    <div class="pageName">
+      <h1>초월 & 계승 계산기</h1>
+      <h3>초월 7단계 / 일리아칸 계승완료 까지 필요한 재료 갯수 계산</h3>
+    </div>
     <div class="direction">
       <h3>원하는 계산의 이미지를 선택한 후, 캐릭터 명을 입력하세요</h3>
     </div>
