--- a/loaproject/loaTier/templates/includes/tierTable.html
+++ b/loaproject/loaTier/templates/includes/tierTable.html
@@ -35,7 +35,12 @@
               <div width="500px" class="renkin" id="Eicon"></div>
             </div>
           </div>
+
           <div border="1" class="maintb">
+            <div class="introduce">
+              OP ~ 4티어까지 원하는 위치에 드래그 & 드롭!
+            </div>
+
             <div id="seticon" class="renkin">
               {% for i in engvs %}
               <div class="imgtag" draggable="true" id="{{ i }}">
