--- a/loaproject/loaCalc/templates/result.html
+++ b/loaproject/loaCalc/templates/result.html
@@ -1,22 +1,8 @@
 {%load static%}
 <div role="tabpanel" id="tabpanel">
   <div class="container">
-    <div class="area_raid_result">
-          <div class="character">
-            <input type="radio" id="kamen_info" name="raidName" value="1" />
-            <label for="kamen_info" id="kamen_info_label">
-              <img src="https://i.imgur.com/inTtFRH.png" alt="카멘" draggable="false" />
-            </label>
-            <span>카멘</span>
-          </div>
-
-          <div class="character">
-            <input type="radio" id="illiakan_info" name="raidName" value="0" />
-            <label for="illiakan_info" id="illiakan_info_label">
-              <img src="https://i.imgur.com/QXnwSY8.png" alt="일리아칸" draggable="false" />
-            </label>
-            <span>일리아칸</span>
-          </div>
+    <div class="instruction">
+     *해당 결과는 '가장 빠른 시간' 안에 '가장 적은 골드를' 사용하게 계산이 되어있습니다*<br>
     </div>
 
     <div>
