--- a/loaproject/loaCalc/static/css/result.css
+++ b/loaproject/loaCalc/static/css/result.css
@@ -7,6 +7,12 @@ body {
   position: relative;
 }
 
+.instruction {
+  margin-top: 70px;
+  font-size: 20px;
+  font-weight: 600;
+}
+
 .count_ingredient {
   width: 100px;
 }
@@ -16,38 +22,6 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-}
-
-.area_raid_result {
-  display: flex;
-  align-items: center;
-}
-
-.character {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-right: 20px;
-}
-
-.character img {
-  width: 70px;
-  height: 70px;
-}
-
-.character span {
-  margin-top: 5px;
-}
-
-.kamenimg {
-  width: 100px;
-  height: 100px;
-}
-
-.kamen {
-  color: white;
-  font-size: 24px;
-  margin-top: 10px;
 }
 
 .tableContainer {
@@ -92,7 +66,7 @@ body {
 .quickSlot {
   display: flex;
   align-items: center;
-  margin-top: 20px;
+  margin-top: 80px;
 }
 
 .quickSlot input[type="number"],
