--- a/loaproject/loaCalc/templates/result.html
+++ b/loaproject/loaCalc/templates/result.html
@@ -2,7 +2,7 @@
 <div role="tabpanel" id="tabpanel">
   <div class="container">
     <div class="instruction">
-     *해당 결과는 '가장 빠른 시간' 안에 '가장 적은 골드를' 사용하게 계산이 되어있습니다*<br>
+     *해당 결과는 '가장 빠른 시간' 안에 '가장 적은 골드'를 사용하게 계산이 되어있습니다*<br>
     </div>
 
     <div>
