--- a/loaproject/loaCalc/templates/result.html
+++ b/loaproject/loaCalc/templates/result.html
@@ -85,15 +85,18 @@
                 </div>
                 
             </fieldset>
-            전체 더보기 적용
-            <input
-              type="checkBox"
-              class="bonus"
-              value="yes"
-              onclick="selectAllyes(this)"
-              id="allbonus"
-            />
-            </div>
+          </div>
+          <div>
+          <input
+            type="checkBox"
+            class="bonus_all"
+            value="yes"
+            onclick="selectAllyes(this)"
+            id="allbonus"
+          >
+          전체 더보기 적용
+        </input>
+      </div>
           </div>
           </fieldset>
       </div>
