--- a/loaproject/loaCalc/templates/input_name.html
+++ b/loaproject/loaCalc/templates/input_name.html
@@ -38,7 +38,9 @@
         </div>
       </form>
     </div>
-
     <footer>{%include "includes/footer.html"%}</footer>
   </body>
+  <script>
+    document.cookie = `opts=; max-age=0`;
+  </script>
 </html>
